heyhey-image id eleement added to ensure image positiomn is relative, covers the background and fully responsive.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,10 +172,10 @@ h6 {
     callout design*/
 }
 
-.heyhey-image {
+#heyhey-image {
     position: relative;
-    height: 80vh;
-    background: url(../myimages/heyhey.jpg) no-repeat center center fixed;
+    width: 100%;
+    background: no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
